--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@pk4media/ember-cli-docker-config",
-  "version": "0.1.0",
-  "description": "Dynamic Configuration Support for ember-cli",
+  "name": "ember-cli-docker-config",
+  "version": "1.0.0",
+  "description": "Dynamic Configuration Support for ember-cli for easier Docker builds.",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -13,7 +13,7 @@
   },
   "repository": "",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 0.12.0"
   },
   "author": "",
   "license": "MIT",
