--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "ember build",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "https://github.com/pk4media/ember-cli-docker-config",
   "engines": {
     "node": ">= 0.12.0"
   },
